assets/css/style.css
/* ... */
@media screen and (max-width: 479px) {
  .profile-image {
    width: 100%;
  }

  .profile-name {
    font-size: 28px;
  }

  .social-links {
    grid-column-gap: 24px;
    grid-row-gap: 24px;
  }

  .hero-numbers-wrap {
    flex-flow: wrap;
    justify-content: center;
    align-items: center;
  }

  .hero-skills-cards-wrap {
    flex-flow: column;
  }

  .experience-card-icon {
    display: none;
  }

  .experience-card-content-wrap {
    max-width: 100%;
  }

  .project-card-icon {
    display: none;
  }

  .tools-collection-list {
    grid-template-columns: 1fr;
  }

  .blog-post-card-content-wrap {
    max-width: 100%;
  }

  .blog-post-card-icon {
    display: none;
  }

  .nav-menu-links {
    padding-left: 12px;
    padding-right: 12px;
  }

  .fire-circle-illustration {
    width: 240px;
    top: 190px;
    left: -150px;
  }

  .nav-link-content-wrap {
    padding: 4px;
  }

  .colors-grid {
    grid-template-columns: 1fr;
  }
}

#w-node-ea09f54b-6c86-cb74-7f08-6b7dab0d5da4-4672603f {
  grid-area: span 1 / span 1 / span 1 / span 1;
}

.hero-number-label {
    white-space: pre-line;
    text-align: left;
    margin: 0;
    line-height: 1.2;
}

